logs/vcli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prompt_toolkit'...
Listing './lib/python3.5/site-packages/prompt_toolkit/clipboard'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/completers'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/regular_languages'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/telnet'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/validators'...
Listing './lib/python3.5/site-packages/prompt_toolkit/eventloop'...
Listing './lib/python3.5/site-packages/prompt_toolkit/filters'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding/bindings'...
Listing './lib/python3.5/site-packages/prompt_toolkit/layout'...
Listing './lib/python3.5/site-packages/prompt_toolkit/libs'...
Listing './lib/python3.5/site-packages/prompt_toolkit/libs/wcwidth'...
Listing './lib/python3.5/site-packages/prompt_toolkit/terminal'...
Listing './lib/python3.5/site-packages/prompt_toolkit-0.57.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setproctitle-1.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlparse'...
Listing './lib/python3.5/site-packages/sqlparse/engine'...
Listing './lib/python3.5/site-packages/sqlparse-0.1.16.egg-info'...
Listing './lib/python3.5/site-packages/vcli'...
Listing './lib/python3.5/site-packages/vcli/packages'...
Listing './lib/python3.5/site-packages/vcli/packages/vspecial'...
Listing './lib/python3.5/site-packages/vcli-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/vertica_python'...
Listing './lib/python3.5/site-packages/vertica_python/tests'...
Listing './lib/python3.5/site-packages/vertica_python/vertica'...
Compiling './lib/python3.5/site-packages/vertica_python/vertica/connection.py'...
***   File "./lib/python3.5/site-packages/vertica_python/vertica/connection.py", line 153
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vertica_python/vertica/messages'...
Listing './lib/python3.5/site-packages/vertica_python/vertica/messages/backend_messages'...
Listing './lib/python3.5/site-packages/vertica_python/vertica/messages/frontend_messages'...
Listing './lib/python3.5/site-packages/vertica_python-0.5.5.egg-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
